--- a/src/input.css
+++ b/src/input.css
@@ -1,3 +1,15 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body{
+    background-color: darkslategray;
+
+}
+
+h1{
+    color : white;
+    font-size: 2rem;
+    font: bold Helvetica;
+    text-align: center;
+}
